Build modularized native image